[project]
name = "leetcode-dsa-python"
version = "0.1.0"
description = "A curated set of LeetCode and DSA solutions written in Python, focused on problem-solving and clean code."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest-cov>=7.0.0",
    "pytest>=8.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=xml"
python_files = ["test_*.py"]
